--- a/conf/config.toml
+++ b/conf/config.toml
@@ -24,3 +24,14 @@ balance-interval = 30
 max-balance-count = 16
 max-balance-retry-per-loop = 10
 max-balance-count-per-loop = 3
+
+[etcd]
+name = "default"
+data-dir = "default.etcd"
+wal-dir = ""
+listen-peer-url = "http://localhost:2380"
+listen-client-url = "http://localhost:2379"
+advertise-peer-url = "http://localhost:2380"
+advertise-client-url = "http://localhost:2379"
+initial-cluster = "default=http://locahost:2380"
+initial-cluster-token = "etcd-cluster"
