--- a/conf/config.toml
+++ b/conf/config.toml
@@ -28,3 +28,14 @@ max-balance-count-per-loop = 3
 max-transfer-wait-count = 3
 leader-score-weight = 0.4
 capacity-score-weight = 0.6
+
+[etcd]
+name = "default"
+data-dir = "default.etcd"
+wal-dir = ""
+listen-peer-url = "http://localhost:2380"
+listen-client-url = "http://localhost:2379"
+advertise-peer-url = "http://localhost:2380"
+advertise-client-url = "http://localhost:2379"
+initial-cluster = "default=http://locahost:2380"
+initial-cluster-token = "etcd-cluster"
