--- a/conf/config.toml
+++ b/conf/config.toml
@@ -39,3 +39,4 @@ advertise-peer-url = "http://localhost:2380"
 advertise-client-url = "http://localhost:2379"
 initial-cluster = "default=http://locahost:2380"
 initial-cluster-token = "etcd-cluster"
+initial-cluster-state = "new"
