--- a/conf/config.toml
+++ b/conf/config.toml
@@ -30,7 +30,7 @@ capacity-score-weight = 0.6
 
 [etcd]
 name = "default"
-data-dir = "default.etcd"
+data-dir = "default.pd"
 wal-dir = ""
 listen-peer-url = "http://localhost:2380"
 listen-client-url = "http://localhost:2379"
