cmd: re-add root path, will be removed later with tikv and tidb.

--- a/conf/config.toml
+++ b/conf/config.toml
@@ -5,6 +5,7 @@ advertise-addr = ""
 etcd-addrs = ["127.0.0.1:2379"]
 http-addr = ":9090"
 pprof-addr = ":6060"
+root = "/pd"
 lease = 3
 log-level = "debug"
 tso-save-interval = 2000
