--- a/conf/config.toml
+++ b/conf/config.toml
@@ -25,7 +25,7 @@ max-balance-count = 16
 max-balance-retry-per-loop = 10
 max-balance-count-per-loop = 3
 max-transfer-wait-count = 3
-max-store-down-interval = 60
+max-store-down-duration = 60
 
 [etcd]
 name = "default"
