--- a/conf/config.toml
+++ b/conf/config.toml
@@ -18,7 +18,7 @@ initial-cluster-state = "new"
 
 addr = "127.0.0.1:1234" # deprecate later
 # if not set, use ${addr}
-advertise-addr = "" # deprecate later 
+# advertise-addr = "" # deprecate later 
 http-addr = "127.0.0.1:9090" # deprecate later
 
 
