--- a/conf/config.toml
+++ b/conf/config.toml
@@ -41,4 +41,4 @@ max-balance-retry-per-loop = 10
 max-balance-count-per-loop = 3
 max-transfer-wait-count = 3
 max-peer-down-duration = "30m"
-max-store-down-duration = "60s"
+max-store-down-duration = "10m"
