--- a/conf/config.toml
+++ b/conf/config.toml
@@ -39,7 +39,7 @@ max-peer-down-duration = "30m"
 max-store-down-duration = "10m"
 
 [metric]
-# prometheus client push interval (second), set 0 to disable prometheus.
-interval = 15
+# prometheus client push interval, set "0s" to disable prometheus.
+interval = "15s"
 # prometheus pushgateway address, leaves it empty will disable prometheus.
 address = ""
