server: guarantee replicas are safe when possible

--- a/conf/config.toml
+++ b/conf/config.toml
@@ -45,3 +45,8 @@ max-replicas = 3
 # For example, ["zone", "rack"] means that we should place replicas to
 # different zones first, then to different racks if we don't have enough zones.
 location-labels = []
+# Allow to balance even if it is unsafe. The balance algorithm tries its best to
+# keep safe, but if resources are limited (not enough zones or racks), or under
+# some abnormal conditions (stores are down or full), the current implementation
+# can't balance and guarantee replicas are safe at the same time.
+#allow-unsafe-balance = false
