--- a/glide.yaml
+++ b/glide.yaml
@@ -202,4 +202,6 @@ import:
   vcs: git
 - package: github.com/chzyer/readline
   version: c914be64f07d9998f52bf0d598ec26d457168c0f 
+- package: github.com/dustin/go-humanize
+  version: 7a41df006ff9af79a29f0ffa9c5f21fbe6314a2d
 - package: github.com/elazarl/go-bindata-assetfs
