server: add time monitor and a corresponding metric
close #496

--- a/glide.yaml
+++ b/glide.yaml
@@ -201,5 +201,7 @@ import:
   repo: https://github.com/spf13/cobra.git
   vcs: git
 - package: github.com/chzyer/readline
-  version: c914be64f07d9998f52bf0d598ec26d457168c0f 
+  version: c914be64f07d9998f52bf0d598ec26d457168c0f
 - package: github.com/elazarl/go-bindata-assetfs
+- package: github.com/ngaut/systimemon
+  version: c2ca1c75c6af5556eb6ce67994120adf12f2ccef
