--- a/glide.yaml
+++ b/glide.yaml
@@ -201,7 +201,7 @@ import:
   repo: https://github.com/spf13/cobra.git
   vcs: git
 - package: github.com/chzyer/readline
-  version: c914be64f07d9998f52bf0d598ec26d457168c0f 
+  version: c914be64f07d9998f52bf0d598ec26d457168c0f
 - package: github.com/dustin/go-humanize
   version: 7a41df006ff9af79a29f0ffa9c5f21fbe6314a2d
 - package: github.com/elazarl/go-bindata-assetfs
@@ -209,3 +209,5 @@ import:
   version: c2ca1c75c6af5556eb6ce67994120adf12f2ccef
 - package: github.com/montanaflynn/stats
   version: f8cd06f93c6c1b06028caafb88b540fc820f77c1
+testImports:
+- package: github.com/pingcap/check
