scheduler: support load initial schedulers' names from config file

--- a/conf/config.toml
+++ b/conf/config.toml
@@ -51,6 +51,18 @@ leader-schedule-limit = 64
 region-schedule-limit = 16
 replica-schedule-limit = 24
 
+# customized schedulers, the format is as below
+# if empty, it will use balanceLeader, balanceRegion, hotReadRegion, hotWriteRegion as default
+[schedule.schedulers]
+# [schedule.schedulers.balanceLeader]
+#		
+# [schedule.schedulers.balanceRegion]
+#		
+# [schedule.schedulers.hotWriteRegion]
+#
+# [schedule.schedulers.hotReadRegion]
+		
+	
 [replication]
 # The number of replicas for each region.
 max-replicas = 3
