--- a/conf/config.toml
+++ b/conf/config.toml
@@ -17,12 +17,13 @@ initial-cluster-state = "new"
 lease = 3
 tso-save-interval = "3s"
 
+[security]
 # Path of file that contains list of trusted SSL CAs. if set, following four settings shouldn't be empty
-tls-cacert-path = ""
+cacert-path = ""
 # Path of file that contains X509 certificate in PEM format.
-tls-cert-path = ""
+cert-path = ""
 # Path of file that contains X509 key in PEM format.
-tls-key-path = ""
+key-path = ""
 
 [log]
 level = "info"
