--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,10 +25,6 @@
   version = "0.2.0"
 
 [[constraint]]
-  name = "github.com/Sirupsen/logrus"
-  version = "0.11.5"
-
-[[constraint]]
   name = "github.com/coreos/etcd"
   version = "3.2.6"
 
@@ -53,6 +49,10 @@
   version = "0.8.0"
 
 [[constraint]]
+  name = "github.com/sirupsen/logrus"
+  version = "1.0.4"
+
+[[constraint]]
   name = "github.com/spf13/cobra"
   source = "https://github.com/spf13/cobra.git"
 
@@ -72,8 +72,3 @@
 [[constraint]]
   name = "gopkg.in/natefinch/lumberjack.v2"
   version = "2.0.0"
-
-[prune]
-  non-go = true
-  go-tests = true
-  unused-packages = true
