--- a/conf/config.toml
+++ b/conf/config.toml
@@ -56,7 +56,7 @@ address = ""
 max-merge-region-size = 0
 max-snapshot-count = 3
 max-pending-peer-count = 16
-max-store-down-time = "1h"
+max-store-down-time = "30m"
 leader-schedule-limit = 4
 region-schedule-limit = 4
 replica-schedule-limit = 8
