--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -19,6 +19,10 @@
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
+[prune]
+  go-tests = true
+  unused-packages = true
+
 [[constraint]]
   name = "github.com/coreos/etcd"
   version = "=3.2.18"
