--- a/conf/config.toml
+++ b/conf/config.toml
@@ -19,7 +19,7 @@ tso-save-interval = "3s"
 
 namespace-classifier = "table"
 
-pre-vote = true
+enable-prevote = true
 
 [security]
 # Path of file that contains list of trusted SSL CAs. if set, following four settings shouldn't be empty
