--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,5 +26,4 @@
 
 [[constraint]]
   name = "github.com/pingcap/kvproto"
-  source = "https://github.com/MyonKeminta/kvproto"
-  branch = "misono/upload-gc-safepoint"
+  branch = "master"
