--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -35,3 +35,7 @@
 [[constraint]]
   name = "github.com/etcd-io/gofail"
   branch = "master"
+
+[[constraint]]
+  name = "github.com/pkg/errors"
+  version = "0.8.0"
