--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,6 +36,10 @@
   name = "github.com/etcd-io/gofail"
   branch = "master"
 
+[[constraint]]
+  name = "github.com/pkg/errors"
+  version = "0.8.0"
+
 [[override]]
   name = "github.com/BurntSushi/toml"
   revision = "3012a1dbe2e4bd1391d42b32f0577cb7bbc7f005"
