--- a/errors.toml
+++ b/errors.toml
@@ -171,6 +171,11 @@ error = '''
 stop dashboard failed
 '''
 
+["PD:diagnose:ErrDiagnoseLoadPlanError"]
+error = '''
+load plan failed
+'''
+
 ["PD:dir:ErrReadDirName"]
 error = '''
 read dir name error
