--- a/errors.toml
+++ b/errors.toml
@@ -171,7 +171,7 @@ error = '''
 stop dashboard failed
 '''
 
-["PD:diagnose:ErrDiagnoseLoadPlanError"]
+["PD:diagnostic:ErrDiagnosticLoadPlanError"]
 error = '''
 load plan failed
 '''
