--- a/errors.toml
+++ b/errors.toml
@@ -606,6 +606,11 @@ error = '''
 scheduler not found
 '''
 
+["PD:scheduler:ErrSchedulerTikvSplitDisabled"]
+error = '''
+tikv split region disabled
+'''
+
 ["PD:semver:ErrSemverNewVersion"]
 error = '''
 new version error
