--- a/errors.toml
+++ b/errors.toml
@@ -171,6 +171,16 @@ error = '''
 stop dashboard failed
 '''
 
+["PD:diagnose:ErrSchedulerDiagnosisNotRunning"]
+error = '''
+%v is not running diagnosis
+'''
+
+["PD:diagnose:ErrSchedulerUndiagnosable"]
+error = '''
+%v hasn't supported diagnostic
+'''
+
 ["PD:diagnostic:ErrDiagnosticLoadPlanError"]
 error = '''
 load plan failed
