scheduler: new slow store detecting and leader evicting
Signed-off-by: Liu Cong <innerr@gmail.com>

--- a/errors.toml
+++ b/errors.toml
@@ -121,6 +121,11 @@ error = '''
 store %v is evicted as a slow store
 '''
 
+["PD:core:ErrSlowTrendEvicted"]
+error = '''
+store %v is evicted as a slow store by trend
+'''
+
 ["PD:core:ErrStoreDestroyed"]
 error = '''
 store %v has been physically destroyed
