--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,6 +11,8 @@ linters:
     - makezero
     - gosec
     - bodyclose
+    - unconvert
+    - ineffassign
   disable:
     - errcheck
 linters-settings:
