mcs: fix cannot build with swagger
Signed-off-by: nolouch <nolouch@gmail.com>

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -25,6 +25,6 @@ jobs:
             ${{ runner.os }}-golang
       - name: Make Check
         run: |
-          make build
+          SWAGGER=1 make build
           make tools
           make check
